Removing multiple reserved word type concepts. With the ScopedSupporter, this is no longer needed as it handles the sharing of the variable names